# recons

./: .gitignore  LICENSE  recons.cabal
examples/: Example1.hs
src/CLI/: Recons.hs
src/Data/Attoparsec/: Recons.hs
src/Data/Recons/: Dict.hs
src/Data/Recons/Dict/: Internal.hs  TrieDictMap.hs
src/Data/Recons/Dict/Internal/: TrieDictMap.hs  TrieDictSkipMap.hs
src/Servant/: Recons.hs
src/Servant/Recons/: Client.hs  ConvertAPI.hs  Dict.hs  Parser.hs
