name:                recons
version:             0.1.0.0
synopsis:            Generic command line client for subsets of Servant API 
description:         Please see README.md
homepage:            https://github.com/voidlizard/recons#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Zuikov
maintainer:          dzuikov@gmail.com 
copyright:           2016 Dmitry Zuikov 
category:            Web 
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     CLI.Recons
                     , Data.Attoparsec.Recons
                     , Data.Recons.Dict
                     , Data.Recons.Dict.TrieDictMap
                     , Servant.Recons
                     , Servant.Recons.Client
                     , Servant.Recons.Dict

  other-modules:       Data.Recons.Dict.Internal.TrieDictMap
                     , Data.Recons.Dict.Internal.TrieDictSkipMap
                     , Servant.Recons.ConvertAPI
                     , Servant.Recons.Parser

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , containers
                     , ghc-prim
                     , haskeline
                     , http-client
                     , http-types
                     , mtl
                     , servant
                     , servant-client
                     , text
                     , transformers
                     , vinyl

  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind


executable Example1 
  hs-source-dirs:      examples
  main-is:             Example1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , recons
                     , aeson
                     , attoparsec
                     , bytestring
                     , containers
                     , ghc-prim
                     , haskeline
                     , http-client
                     , http-types
                     , mtl
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , transformers
                     , vinyl
                     , wai
                     , warp


  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/recons
